samples/_failures_safe/1761543178_29313a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_064619a6.c: In function ‘tokenize’:
./samples/SAFE/__tmp_064619a6.c:155:32: error: ‘adv’ undeclared (first use in this function)
  155 |             char unknown[2] = {adv
      |                                ^~~
./samples/SAFE/__tmp_064619a6.c:155:32: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_064619a6.c:156: error: expected ‘}’ at end of input
./samples/SAFE/__tmp_064619a6.c:155:31: note: to match this ‘{’
  155 |             char unknown[2] = {adv
      |                               ^
./samples/SAFE/__tmp_064619a6.c:155:13: error: expected declaration or statement at end of input
  155 |             char unknown[2] = {adv
      |             ^~~~
./samples/SAFE/__tmp_064619a6.c:155:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_064619a6.c:155:13: error: expected declaration or statement at end of input
